# rgbw_zephyr

./: .gitignore  CMakeLists.txt  README.md  b0.conf  mcuboot.conf  prj.conf  west.yml
.devcontainer/: Dockerfile  devcontainer.json  west.yml
.devcontainer/scripts/: setup-env.sh  west-cache.sh
boards/arm/core840/: Kconfig.board  Kconfig.defconfig  core840.dts  core840.yaml  core840_defconfig
include/: accel.h  alarm.h  alphabet.h  ble.h  board.h  calendar.h  clock.h  countdown.h  cts.h  disp.h  i2c.h  menu.h  metronome.h  motor.h  power.h  rgb_led.h  screen.h  state.h  stopwatch.h
include/import/: accel.h  clock.h  disp.h  menu.h  screen.h  settings.h  test.h
src/: accel.c  alarm.c  ble.c  board.c  calendar.c  clock.c  countdown.c  cts.c  disp.c  i2c.c  main.c  menu.c  metronome.c  motor.c  pinmux.c  power.c  rgb_led.c  screen.c  state.c  stopwatch.c
src/import/: accel.c  battery.c  clock.c  disp.c  menu.c  screen.c  settings.c
